<resources>
    <string name="app_name">My Planet</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sites">Sites</string>
    <string name="menu_travel_agency">Travel_Agency</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Please Confirm Password</string>
    <string name="signed">Signed in</string>
    <string name="already_have_an_account_login">Login in</string>
    <string name="already_have_an_account_sign_in">Sign in</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account_sign_in">Sign up</string>

    <string name="first_last">FIRST NAME LAST NAME</string>
    <string name="to_do">TO DO LIST</string>
    <string name="EDIT_PROFILE">EDIT PROFILE</string>
    <string name="Memory_Bank">Memory Bank</string>
    <string name="Camping_Rank">Camping Rank</string>
    <string name="Reviews">Reviews</string>
    <string name="Groups">Groups</string>
    <string name="INTERESTS">INTERESTS</string>
    <string name="HELP">HELP</string>
    <string name="Settings">Settings</string>


    <string name="NATURES_FULLNESS">NATURES FULLNESS</string>
    <string name="The_HighLands">The HighLands</string>
    <string name="The_Waters">The Waters</string>
    <string name="The_Great_OutDoors">The Great OutDoors</string>
    <string name="The_Extremes">The Extremes</string>
    <string name="Historical_sites">Historical Sites</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reference">Reference</string>
    <string name="todo">TODO</string>
</resources>