<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myplanet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myplanet.ui.sites.SitesFragment"
        android:label="@string/menu_sites"
        tools:layout="@layout/fragment_sites" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myplanet.ui.travel_agency.TravelAgencyFragment"
        android:label="@string/menu_travel_agency"
        tools:layout="@layout/fragment_travel_agency" />
    <fragment
        android:id="@+id/nav_reference"
        android:name="com.example.myplanet.ui.travel_agency.ReferenceFragment"
        android:label="@string/reference"
        tools:layout="@layout/fragment_reference" />
</navigation>